# mbzirc2020_ball_planner

./: .gitignore  CMakeLists.txt  README.md  ball_planner.xml  balloon_planner.xml  package.xml  test.launch
config/: PlanningParams.cfg  plan_params.yaml  sim_plan_params.yaml  trajectory_gen.yaml
include/: BalloonPlanner.h  LkfAssociation.h
include/ball_planner/: BallPlanner.h
include/balloon_planner/: BalloonPlanner.h  Lkf.h  eight_rheiv.h  eight_ukf.h
launch/: catch_eightball.launch  choose_balloon.launch  csv_eval.launch  detection_pipeline.launch  evaluate.launch  generate_eight.launch  localization_pipeline.launch  sim_plan.launch  simulation.launch
scripts/: csv_eval.py  curv_test.py  eight_generator.py  evaluate.py  fit_eval.py  plot_csvs.py  record.sh  record_oustr.sh
src/: BallPlanner.cpp  BalloonPlanner.cpp  Lkf.cpp  eight_rheiv.cpp  eight_ukf.cpp
tex/: classes.tex  classes_err.tex  graph.tex
tmux_scripts/ballcatcher/: ballcatcher.sh  world.yaml
tmux_scripts/ballcatcher/custom_configs/: constraint_manager.yaml  control_manager.yaml  gain_manager.yaml  landoff_tracker.yaml  mpc_tracker.yaml  nimbro.yaml  odometry.yaml  uav_manager.yaml
tmux_scripts/dataset/: ball_dataset.sh
tmux_scripts/dataset/custom_configs/: constraint_manager.yaml  gain_manager.yaml  landoff_tracker.yaml  mpc_tracker.yaml  nimbro.yaml  odometry.yaml  uav_manager.yaml
tmux_scripts/frombag/: session.yml
tmux_scripts/just_flying_balltraj/: just_flying_balltraj.sh
tmux_scripts/just_flying_balltraj/custom_configs/: constraint_manager.yaml  landoff_tracker.yaml  mpc_tracker.yaml  odometry.yaml  uav_manager.yaml
tmux_scripts/oustr/: oustr.sh
tmux_scripts/oustr/custom_configs/: gain_manager.yaml  mpc_tracker.yaml
tmux_scripts/simulation/: .tmuxinator.yml  planner.sh  session.yml  spawn60.csv  spawn62.csv
tmux_scripts/simulation/custom_configs/: constraint_manager.yaml  gain_manager.yaml  mpc_tracker.yaml  odometry.yaml  uav_manager.yaml
