<?xml version="1.0"?>
<package>

  <name>balloon_planner</name>
  <version>1.0.0</version>
  <description>The balloon_planner package</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>object_detect</build_depend>

  <run_depend>mrs_lib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/balloon_planner.xml" />
  </export>

</package>
