<?xml version="1.0"?>
<package format="2">

  <name>balloon_planner</name>
  <version>1.0.0</version>
  <description>The balloon_planner package</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>balloon_filter</depend>
  <depend>uav_localize</depend>
  <depend>nodelet</depend>

  <build_depend>message_generation</build_depend>

  <export>
    <nodelet plugin="${prefix}/balloon_planner.xml" />
  </export>

</package>
